--- a/resources/themes/phone/modules/_videos.scss
+++ b/resources/themes/phone/modules/_videos.scss
@@ -33,6 +33,9 @@
 			.img-container{
 				@include wbz-box-pack(end);
 				@include wbz-box-align(start);
+				background-size: cover;
+				background-position: center;
+				background-repeat: no-repeat;
 			}
 			.gradient-bg{
 				@include wbz-box-pack(center);
@@ -40,8 +43,7 @@
 				padding: 0px 10px 10px 10px;
 				@include background(linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3) 0.3, rgba(0,0,0,0.6) 0.97, rgba(0,0,0,0.7)));
 				background: -ms-linear-gradient(top, rgba(0,0,0,00) 0%, rgba(0,0,0,0.3) 30%, rgba(0,0,0,0.6) 97%,  rgba(0,0,0,0.7) 100%); /* IE10+ */
-				position: relative;
-				bottom: -1px;
+				width: 100%;
 				
 				h1{
 					font-size: 15px;
@@ -261,6 +263,21 @@
 			position: relative;
 			left: 50%;
 			@include wbz-transform(translateX(-50%));
+		}
+	}
+	.article-media{
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+		
+		.overlay{
+			@include wbz-inline-icon(play, 50px);
+			color: rgba(255,255,255, 0.6);
+			
+			&::before{
+				height: 50px;
+				margin: auto 0;
+			}
 		}
 	}
 }
