--- a/resources/css/phone/phone.css
+++ b/resources/css/phone/phone.css
@@ -9507,6 +9507,337 @@ body.x-desktop {
   color: #ffffff;
 }
 
+/* line 1, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list {
+  background: #ffffff;
+}
+/* line 4, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .top-bar {
+  background: #ee7f00;
+  border-bottom: 2px solid #ffffff;
+}
+/* line 8, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .top-bar .x-title {
+  font-size: 18px;
+  color: #ffffff;
+  text-shadow: none;
+  font-weight: normal;
+}
+/* line 15, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .top-bar .close-button .close {
+  color: #ffffff;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  top: 0px;
+  right: 0px;
+}
+/* line 23, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .top-bar .close-button .close::before {
+  line-height: 50px!important;
+}
+/* line 31, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item {
+  border-bottom: 2px solid #ffffff;
+}
+/* line 34, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item .img-container {
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  box-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  box-align: start;
+  align-items: flex-start;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+/* line 41, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  box-pack: center;
+  justify-content: center;
+  overflow: hidden;
+  padding: 0px 10px 10px 10px;
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7));
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7));
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7));
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7));
+  background: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7));
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7) 100%);
+  /* IE10+ */
+  width: 100%;
+}
+/* line 49, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg h1 {
+  font-size: 15px;
+  color: #ffffff;
+  font-weight: normal;
+  margin: 0 0 5px 0;
+}
+/* line 55, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg .stats {
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  box-pack: start;
+  justify-content: flex-start;
+}
+/* line 58, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg .stats .comments {
+  font-size: 13px;
+  color: #7caad6;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: -moz-inline-box;
+  display: inline-flex;
+  margin: 0 15px 0 0;
+}
+/* line 64, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg .stats .comments .icon {
+  color: #7caad6;
+  width: 18px;
+  height: 18px;
+  margin: 0 5px 0 0;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg .stats .comments .icon:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 18px !important;
+  font-weight: normal!important;
+  content: "\24";
+}
+/* line 71, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg .stats .comments .icon::before {
+  line-height: 18px;
+  position: relative;
+}
+/* line 77, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg .stats .ranking {
+  font-size: 13px;
+  color: #7caad6;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: -moz-inline-box;
+  display: inline-flex;
+  margin: 0 15px 0 0;
+}
+/* line 83, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg .stats .ranking .icon {
+  color: #7caad6;
+  width: 18px;
+  height: 18px;
+  margin: 0 5px 0 0;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg .stats .ranking .icon:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 18px !important;
+  font-weight: normal!important;
+  content: "\40";
+}
+/* line 90, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.hospitals-list .x-dataview-container .item .gradient-bg .stats .ranking .icon::before {
+  line-height: 18px;
+  position: relative;
+}
+
+/* line 102, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel.x-layout-card-item {
+  background: #ffffff;
+}
+/* line 105, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .top-bar {
+  background: #ee7f00;
+  border-bottom: 0px;
+}
+/* line 109, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .top-bar .x-title {
+  font-size: 18px;
+  color: #ffffff;
+  text-shadow: none;
+  font-weight: normal;
+}
+/* line 115, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .top-bar .x-panel-inner {
+  padding: 0 10px;
+}
+/* line 118, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .top-bar .close-button {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+}
+/* line 123, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .top-bar .close-button .close {
+  color: #ffffff;
+  top: 0px;
+  right: 0px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+}
+/* line 131, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .top-bar .close-button .close::before {
+  line-height: 50px;
+}
+/* line 137, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .bottom-bar {
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  border-radius: 0px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  padding: 0px;
+  background: #7caad6;
+  border-top: 1px solid #a4ccea;
+}
+/* line 145, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .bottom-bar .x-button.pressed {
+  background: #5389c2;
+}
+/* line 148, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .bottom-bar .x-button .x-button-icon {
+  color: #ffffff;
+}
+/* line 151, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .bottom-bar .x-button .x-button-label, .map-panel .bottom-bar .x-button .x-badge, .map-panel .bottom-bar .x-button .x-hasbadge .x-badge, .x-hasbadge .map-panel .bottom-bar .x-button .x-badge {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  background: none;
+  border: 0px;
+  text-shadow: none;
+  font-size: 16px;
+  color: #ffffff;
+  font-weight: normal;
+  position: relative;
+  top: -2px;
+  left: 5px;
+  width: 0px;
+  min-width: 0;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: -moz-inline-box;
+  display: inline-flex;
+  overflow: visible;
+}
+/* line 168, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .bottom-bar .open-button {
+  background: #5389c2;
+}
+/* line 171, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .bottom-bar .open-button.pressed {
+  opacity: 0.8;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.map-panel .bottom-bar .open-button .toggle:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 24px !important;
+  font-weight: normal!important;
+  content: "\28";
+}
+/* line 177, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .bottom-bar .open-button .toggle.up {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+/* line 180, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .bottom-bar .open-button .toggle.down {
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+}
+/* line 186, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .hospitals-bar {
+  background: #7caad6;
+}
+/* line 190, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .hospitals-bar .x-panel-inner .x-innerhtml {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: box;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  box-orient: horizontal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  box-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  box-align: center;
+  align-items: center;
+}
+/* line 196, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .hospitals-bar .x-panel-inner .x-innerhtml .icon {
+  color: #ffffff;
+  width: 50px;
+  height: 50px;
+  display: -webkit-box;
+  position: relative;
+  line-height: 40px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.map-panel .hospitals-bar .x-panel-inner .x-innerhtml .icon:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 22px !important;
+  font-weight: normal!important;
+  content: "\34";
+}
+/* line 205, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .hospitals-bar .x-panel-inner .x-innerhtml .icon::before {
+  width: 50px;
+  height: 50px;
+  line-height: 40px;
+}
+/* line 211, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .hospitals-bar .x-panel-inner .x-innerhtml .title {
+  font-size: 15px;
+  color: #ffffff;
+}
+/* line 215, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_maps.scss */
+.map-panel .hospitals-bar .x-panel-inner .x-innerhtml .title h1 {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: block;
+  white-space: nowrap;
+  margin: 0 60px 0 0;
+}
+
 /**********************************************************************************************************************/
 /*
 /* IMPORT WIDGETS 
