--- a/resources/sass/phone/_all.scss
+++ b/resources/sass/phone/_all.scss
@@ -22,6 +22,7 @@
 @import '../../themes/phone/modules/rate';
 @import '../../themes/phone/modules/videos';
 @import '../../themes/phone/modules/media';
+@import '../../themes/phone/modules/maps';
 
 /**********************************************************************************************************************/
 /*
